Style(core): Topbar menu button no longer shifts when menu opens

--- a/src/static/styles/output.css
+++ b/src/static/styles/output.css
@@ -2605,6 +2605,14 @@ svg {
   top: calc(var(--h-topbar) + 1rem);
 }
 
+.right-4 {
+  right: 1rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
